<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!--<item-->
        <!--android:id="@+id/action_refresh"-->
        <!--android:orderInCategory="1"-->
        <!--android:title="@string/Reset"-->
        <!--app:showAsAction="ifRoom" />-->


    <item
        android:id="@+id/most_popular"
        android:orderInCategory="2"
        android:title="@string/MostPopular" />
    <item
        android:id="@+id/top_rated"
        android:orderInCategory="3"
        android:title="@string/TopRated" />
    <item
        android:id="@+id/favorites_collection"
        android:orderInCategory="4"
        android:title="@string/FavoritesCollection" />


</menu>